--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,6 +7,7 @@
   --color-primary: #f5f5f5;
   --color-primary-foreground: #181414;
   --color-muted: #949EA2;
+  --color-accent: #404040;
 }
 
 @layer base {
