--- a/src/modules/theme/theme.css
+++ b/src/modules/theme/theme.css
@@ -6,8 +6,15 @@
   --color-foreground: #ffffff;
   --color-primary: #f5f5f5;
   --color-primary-foreground: #181414;
-  --color-muted: #949EA2;
+  --color-secondary: #303030;
+  --color-muted: #949ea2;
   --color-accent: #404040;
+
+  --popover: oklch(1 0 0);
+  --popover-foreground: oklch(0.145 0 0);
+  --border: oklch(0.922 0 0);
+
+  --inset-shadow-sm: inset 0 -1px 0 0 rgb(255 255 255 / 20%);
 }
 
 @layer base {
