--- a/src/modules/theme/theme.css
+++ b/src/modules/theme/theme.css
@@ -1,4 +1,5 @@
 @import "tailwindcss";
+@import "tw-animate-css";
 
 @theme {
   --font-sans: "DM Sans" sans-serif;
@@ -15,12 +16,22 @@
   --border: oklch(0.922 0 0);
 
   --inset-shadow-sm: inset 0 -1px 0 0 rgb(255 255 255 / 20%);
+
+  --sidebar: oklch(0.985 0 0);
+  --sidebar-foreground: oklch(0.145 0 0);
+  --sidebar-primary: oklch(0.205 0 0);
+  --sidebar-primary-foreground: oklch(0.985 0 0);
+  --sidebar-accent: oklch(0.97 0 0);
+  --sidebar-accent-foreground: oklch(0.205 0 0);
+  --sidebar-border: oklch(0.922 0 0);
+  --sidebar-ring: oklch(0.708 0 0);
 }
 
 @layer base {
   body {
     @apply bg-background text-foreground font-sans antialiased;
   }
+
   button {
     @apply cursor-pointer;
   }
